# speedoMeter

./: CMakeLists.txt  README.md
generator/: CMakeLists.txt  main.cpp
generator/comm_generator/: CMakeLists.txt  commGenerator.cpp  commGenerator.hpp
generator/value_generator/: CMakeLists.txt  periodicGenerator.cpp  periodicGenerator.hpp
pipe/: CmakeLists.txt  pipe.cpp  pipe.hpp
speedometer/: CMakeLists.txt  main.cpp
speedometer/comm_meter/: CMakeLists.txt  commMeter.cpp  commMeter.hpp
speedometer/meter/: CMakeLists.txt  meterLogic.cpp  meterLogic.hpp
speedometer/meterUI/: CMakeLists.txt  QtDesigner.ui  SpeedometerUI.cpp  SpeedometerUI.hpp
